<resources>
    <string name="app_name">FixU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textDiagnoseDescription">Start your mental health check-up by taking a brief diagnostic survey. This will help us understand how you\'re feeling and provide personalized insights.</string>
    <string name="quote_image">quote image</string>
    <string name="history">History</string>
    <string name="view_more">View More</string>
    <string name="diagnose_result">Diagnose Result</string>
    <string name="date">11/11/2024</string>
    <string name="note_title">Title of Notes</string>
    <string name="note_content">When you try your best, but you dont succeed When you get what you want, but not what you need When you feel so tired, but you cant sleep Stuck in reverse</string>
    <string name="fab_add_note">Add Note</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="diagnose">Diagnose</string>
    <string name="home">Home</string>
    <string name="consultation">Consultation</string>
    <string name="profile">Profile</string>
    <string name="consult">Consult</string>
    <string name="signin">Sign in</string>
    <string name="log_in_to_fixu">Log in to Fixu</string>
    <string name="email">Email</string>
    <string name="input_email">Input Email</string>
    <string name="password">Password</string>
    <string name="input_password">Input Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="doesn_t_have_account">Doesn\'t have account?</string>
    <string name="input_confirm_password">Input Confirm Password</string>
    <string name="have_account">Have account?</string>
    <string name="log_in">Log in</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="create_your_free_account">Create Your Free Account</string>
    <string name="full_name">Full Name</string>
    <string name="input_full_name">Input Full Name</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="input_whatsapp">Input Whatsapp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="status_question">What\'s your current status?</string>
    <string name="submit">Submit</string>
    <string name="feedback_result">"The assessment suggests a low likelihood of current depression, but your history of suicidal thoughts and current high work pressure and financial stress warrant attention. It's understandable that these factors impact your sleep and overall well–being.\n To improve, consider prioritizing sleep (aim for 7–8 hours) even if it means adjusting your work schedule slightly. Explore stress-management techniques like mindfulness or exercise, even in short bursts. Finally, reaching out to a therapist or counselor to process past suicidal thoughts could be incredibly beneficial."</string>
    <string name="percent_result">98,89</string>
    <string name="back_home">Back to Home</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="txtprofessional">Professional</string>
    <string name="txtstudent">Student</string>
    <string name="txtget_started">get started</string>
    <string name="delete">Delete</string>
    <string name="save_note">Save Note</string>
    <string name="user">User</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign out</string>
    <string name="user_image">user image</string>
    <string name="change_password">Change Password</string>
    <string name="switch_reminder">switch reminder</string>
    <string name="switch_dark_mode">switch dark mode</string>
    <string name="_20_00">20:00</string>
    <string name="click_to_the_set_time">Click to set the time</string>
    <string name="click_to_change_mode">Click to change mode</string>
    <string name="add_notes">Add Notes</string>
    <string name="diagnose_question">Diagnose Question</string>
    <string name="title_diagnose_result">Diagnose Result</string>
    <string name="let_s_write_your_feelings_today">Let\'s write your feelings today</string>
    <string name="no_data_history">Take your first diagnosis now</string>
    <string name="fixu_logo">Fixu_logo</string>
    <string name="diary">Diary</string>
    <string name="diary_reminder">Diary Reminder</string>
    <string name="motto">Let\'s FixU and make a difference!</string>
</resources>