<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/diagnoseFragment"
        android:icon="@drawable/ic_diagnose"
        android:title="@string/diagnose" />

    <item
        android:id="@+id/consultationFragment"
        android:icon="@drawable/ic_consult"
        android:title="@string/consultation" />

    <item
        android:id="@+id/notesFragment"
        android:icon="@drawable/ic_notes"
        android:title="@string/notes" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>