<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#F0F7EC"
    android:padding="24dp">

    <!-- Logo atau Nama Aplikasi -->
    <ImageView
        android:id="@+id/fixuLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/fixulogolight"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Text "Log in" -->
    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_to_fixu"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@+id/fixuLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Text "Email" -->
    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@+id/textLogin"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Input Email -->
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/input_email"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Text "Password" -->
    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Input Password -->
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/input_password"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Tombol Login -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:text="@string/signin"
        android:textColor="@color/surfacecolor"
        android:backgroundTint="@color/primary"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Teks Register -->
    <TextView
        android:id="@+id/textHaveacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:text="@string/doesn_t_have_account"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Link Register -->
    <TextView
        android:id="@+id/signupDirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textSize="14sp"
        android:textColor="@color/primary"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@+id/textHaveacc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
