<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    tools:context=".ResultActivity"
    android:id="@+id/main"
     >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_result"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorTertiary"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="68dp" />

        <TextView
            android:id="@+id/tv_diagnose_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="16dp"
            android:text="@string/diagnose"
            app:layout_constraintEnd_toStartOf="@id/tv_probability_result"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_probability_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="16dp"
            android:text="@string/percent_result"
            app:layout_constraintTop_toTopOf="@id/tv_diagnose_result"
            app:layout_constraintBottom_toBottomOf="@id/tv_diagnose_result"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/tv_feedback_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_diagnose_result"
            android:text="@string/feedback_result" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_feedback_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/back_home" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>