<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/backgroundcolor"
    tools:context=".fragment.AddNotesFragment">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:focusableInTouchMode="true"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/title"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:autofillHints="none"
        tools:ignore="VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="none"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/content"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_check_circle_24"
        app:backgroundTint="@color/secondaryvariant"
        app:tint="@color/white" />

</LinearLayout>