<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="4dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_date_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            android:textSize="11sp"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/tvNoteTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="2dp"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textSize="16sp"
            tools:text="@string/note_title" />
        <TextView
            android:id="@+id/tvNoteContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toBottomOf="@id/tvNoteTitle"
            card_view:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="2dp"
            android:textSize="12sp"
            android:maxLines="4"
            tools:text="@string/note_content" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>