<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="4dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_date_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            android:textSize="11sp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tv_resultLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/tv_date_history"
            card_view:layout_constraintEnd_toStartOf="@id/btn_history_view_more"
            android:layout_marginHorizontal="2dp"
            android:textStyle="bold"
            android:textAlignment="center"
            tools:text="@string/diagnose_result" />

        <Button
            android:id="@+id/btn_history_view_more"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:text="@string/view_more"
            android:textSize="11sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>