<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:paddingBottom="16dp"
    tools:context=".ui.fragment.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:logo="?attr/toolbarLogo"
        app:contentInsetStart="0dp"
        app:titleTextColor="?attr/colorOnPrimaryContainer"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/ic_fixu_logo_light" />

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/home"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ivQuoteImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/quote_image"
        android:scaleType="centerCrop"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_square"
        android:clipToOutline="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/backgrounds/scenic"
        tools:targetApi="s" />

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivQuoteImage"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/history"
        android:textColor="?attr/colorOnSurface"/>

    <Button
        android:id="@+id/btn_view_more"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:text="@string/view_more"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivQuoteImage"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_view_more"
        tools:listitem="@layout/history_item"
        tools:itemCount="5"/>

    <ProgressBar
        android:id="@+id/historyHomeLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/rv_history_home"
        app:layout_constraintBottom_toBottomOf="@id/rv_history_home"
        app:layout_constraintStart_toStartOf="@id/rv_history_home"
        app:layout_constraintEnd_toEndOf="@id/rv_history_home"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>